# fuyun_tools

./: .gitignore  LICENSE  PLAN.md  PROJECT_MEMORY.md  README.md  README_EN.md  package-lock.json  package.json
.github/workflows/: release.yml
.lingma/rules/: code.md
frontend/: clipboard.html  package-lock.json  package.json  result_display.html  selection_toolbar.html  settings.html  vite.config.js
frontend/src/pages/selection_toolbar/: App.vue
src/: clipboard.html  image_clipboard.html  image_preview.html  package-lock.json  package.json  result_display.html  selection_toolbar.html  settings.html  vite.config.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_client.rs  clipboard.rs  config.rs  lib.rs  linux_text_selection.rs  macos_text_selection.rs  main.rs  mouse_listener.rs  text_selection.rs  utils.rs  windows_text_selection.rs
src-tauri/src/core/: app_state.rs  config.rs  error.rs  logger.rs  mod.rs
src-tauri/src/features/: mod.rs  mouse_listener.rs  text_selection.rs
src-tauri/src/services/: adaptive_poll.rs  ai_client.rs  ai_services.rs  clipboard_manager.rs  clipboard_wakeup.rs  image_clipboard_manager.rs  mod.rs  poll_metrics.rs
src-tauri/src/ui/: commands.rs  mod.rs  tray_menu.rs  window_manager.rs
src-tauri/src/utils/: clipboard.rs  image_clipboard.rs  mod.rs  utils.rs  utils_helpers.rs
src/pages/clipboard/: App.vue
src/pages/clipboard/components/: ClipboardList.vue  ClipboardToolbar.vue
src/pages/clipboard/composables/: useCategoryManager.js  useClipboardHistory.js  useWindowOffset.js
src/pages/image_clipboard/: App.vue  main.js
src/pages/image_preview/: App.vue
src/pages/result_display/: App.vue  main.js
src/pages/selection_toolbar/: App.vue  main.js
src/pages/settings/: App.vue
src/pages/settings/components/: AISettings.vue  AboutSettings.vue  ClipboardSettings.vue
src/pages/settings/composables/: useAIProvider.js  useShortcutRecorder.js  useUpdater.js
src/scripts/: clipboard.js  main.js  marked.min.js  toast.js
src/services/: ipc.js
src/styles/: clipboard.css  main.css  settings.css  toast.css
src/utils/: errorHandler.js
